Ran ktlint on the project